Complete HTML and CSS layout for large screens

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         rel="stylesheet">
 
 
+
+    <!-- font-awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <!-- Style sheet  -->
 
     <link rel="stylesheet" href="style.css">
@@ -23,6 +30,196 @@
 </head>
 
 <body>
+
+    <!-- Header Section -->
+
+    <header class="container">
+        <nav class="navbar content-width">
+            <img src="./assets/logo.png" alt="" class="logo">
+            <ul class="nav-links">
+                <li class="nav-link active"><a href="#">Home</a></li>
+                <li class="nav-link"><a href="#">shop</a></li>
+                <li class="nav-link"><a href="#">About us</a></li>
+                <li class="nav-link"><i class="fa-solid fa-cart-shopping"></i> <span>Cart ($56)</span></li>
+            </ul>
+             <li class="mob-cart "><i class="fa-solid fa-cart-shopping"></i> <span>Cart ($56)</span></li>
+        </nav>
+
+        <section class="content-width banner">
+            <div class="banner-content">
+                <h1 class="banner-title">ALWAYS <span>FRESH <br> FLOWERS</span>
+                    <p class="banner-description">Indulge your senses with the beauty and fragrance of our fresh flower
+                        shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are
+                        perfect for any occasion. </p>
+            </div>
+            <div class="banner-image">
+                <img src="./assets/hero-flower.png" alt="Banner Image Flower">
+            </div>
+        </section>
+
+    </header>
+
+
+    <!-- Main Section -->
+
+    <main class="container">
+
+        <!-- Our Plant Sction  -->
+
+        <section class="plant content-width">
+            <h1 class="plant-title">Our <span>Plants</span></h1>
+            <p class="plant-description">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <div class="plant-container">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./assets/sample-flower-image.png" alt="Card Image">
+                    </div>
+                    <div class="card-description">
+                        <h2>Lily Blossom</h2>
+                        <h1>20 USD</h1>
+                    </div>
+                    <button class="card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./assets/sample-flower-image.png" alt="Card Image">
+                    </div>
+                    <div class="card-description">
+                        <h2>Lily Blossom</h2>
+                        <h1>20 USD</h1>
+                    </div>
+                    <button class="card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./assets/sample-flower-image.png" alt="Card Image">
+                    </div>
+                    <div class="card-description">
+                        <h2>Lily Blossom</h2>
+                        <h1>20 USD</h1>
+                    </div>
+                    <button class="card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./assets/sample-flower-image.png" alt="Card Image">
+                    </div>
+                    <div class="card-description">
+                        <h2>Lily Blossom</h2>
+                        <h1>20 USD</h1>
+                    </div>
+                    <button class="card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./assets/sample-flower-image.png" alt="Card Image">
+                    </div>
+                    <div class="card-description">
+                        <h2>Lily Blossom</h2>
+                        <h1>20 USD</h1>
+                    </div>
+                    <button class="card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./assets/sample-flower-image.png" alt="Card Image">
+                    </div>
+                    <div class="card-description">
+                        <h2>Lily Blossom</h2>
+                        <h1>20 USD</h1>
+                    </div>
+                    <button class="card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./assets/sample-flower-image.png" alt="Card Image">
+                    </div>
+                    <div class="card-description">
+                        <h2>Lily Blossom</h2>
+                        <h1>20 USD</h1>
+                    </div>
+                    <button class="card-btn">ADD TO CART</button>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="./assets/sample-flower-image.png" alt="Card Image">
+                    </div>
+                    <div class="card-description">
+                        <h2>Lily Blossom</h2>
+                        <h1>20 USD</h1>
+                    </div>
+                    <button class="card-btn">ADD TO CART</button>
+                </div>
+
+            </div>
+        </section>
+
+
+
+
+
+
+
+        <!-- Subscribe Section -->
+         <section class="subscribe">
+            <div class="subscribe-box">
+                <h1>Join the colorful Bunch</h1>
+
+                <div class="input-box"><input type="text" placeholder="Write email"> <button class="btn">Subscribe</button></div>
+            </div>
+         </section>
+
+
+
+
+
+
+
+
+
+    </main>
+
+
+
+
+    <!-- Footer Scetion -->
+
+    <footer class="container">
+
+
+        <div class="footer-container content-width">
+            <div class="footer-box1">
+                  <img src="./assets/logo.png" alt="" class="logo">
+                  <p>Indulge your senses with the beauty and         of our fresh flower shop. </p>
+
+            </div>
+             <div class="footer-box2">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Help Center</a></li>
+                </ul>
+            </div>
+             <div class="footer-box3">
+                <img src="./assets/icon-linkedin.png" class="solial_icons" alt="Social icons">
+                <img src="./assets/icon-twitter.png" class="solial_icons" alt="Social icons">
+                <img src="./assets/icon-youtube.png" class="solial_icons" alt="Social icons">
+                <img src="./assets/icon-facebook.png" class="solial_icons" alt="Social icons">
+                
+            </div>
+        </div>
+
+    </footer>
+
+
 
 </body>
 
