Make every section responsive for mobile devices

--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
 
 
         <!-- Subscribe Section -->
-         <section class="subscribe">
+         <section class="subscribe container">
+            <img src="./assets/news-letter-bg.png" alt="flower image">
             <div class="subscribe-box">
                 <h1>Join the colorful Bunch</h1>
 
