Challange Part Implementation Done

--- a/index.html
+++ b/index.html
@@ -157,6 +157,74 @@
 
 
 
+        <!-- trust section -->
+
+        <section class="trust content-width">
+            <div class="trust-left">
+                
+                <img src="./assets/flower-store.png" class="store-image" alt="flower">
+
+                <img src="./assets/trusted-badge.png" class="trust-badge" alt="">
+            </div>
+            <div class="trust-right">
+                <h1>Flower & Plants Lover</h1>
+
+                <ul>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                        to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                        to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                        to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
+            </div>
+        </section>
+
+
+
+        <!-- Deal Section -->
+
+         <!-- Latest Deals -->
+        <section class="latest-deal">
+            <h1>Latest <span>Deals</span> </h1>
+            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic
+                blooms, we offer a wide variety of fresh.</p>
+
+
+
+
+            <div class="deals content-width">
+                <div class="deal-left">
+                    <div class="deal1">
+                        <div class="overlay">
+                            <h1 class="deal-title">60% Off | Bloom Plant</h1>
+                            <a class="shop" href="#">Shop Now</a>
+                        </div>
+
+                    </div>
+                    <div class="deal2">
+                        <div class="overlay">
+                            <h1 class="deal-title">30% Off | Ana Plant</h1>
+                            <a class="shop" href="#">Shop Now</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="deal-right">
+                    <div class="overlay">
+                        <h1 >25% Off | Zabo Plant </h1>
+                        <a  href="#">Shop Now</a>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+
+
+
+
+
 
 
 
